[package]
name = "prueba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
borsh-derive = "1.0.0-alpha.4"
solana-program = "~1.16.13"
getrandom = { version = "0.2.8", features = ["custom"] }
rand = "0.8"

[dev-dependencies]
solana-program-test = "~1.16.13"
solana-sdk = "~1.16.13"

[lib]
name = "prueba"
crate-type = ["cdylib", "lib"]